--- a/各類簡報、資料/各類簡報、資料.md
+++ b/各類簡報、資料/各類簡報、資料.md
@@ -1,3 +1,3 @@
 # 各類簡報、資料
 
-[2022寒假講座](/各類簡報、資料/2022寒假講座/2022寒假講座%20講義&資源)
+[2022寒假講座](https://lmshlmcps4th.github.io/Bulletin-Board/%E5%90%84%E9%A1%9E%E7%B0%A1%E5%A0%B1%E3%80%81%E8%B3%87%E6%96%99/2022%E5%AF%92%E5%81%87%E8%AC%9B%E5%BA%A7/2022%E5%AF%92%E5%81%87%E8%AC%9B%E5%BA%A7%20%E8%AC%9B%E7%BE%A9&%E8%B3%87%E6%BA%90)
