--- a/社團串聯.md
+++ b/社團串聯.md
@@ -3,7 +3,8 @@
 ## Instagram
 * [110th社團ig(總站)](https://https://hackmd.io/@cheung4843/HycouTvtuwww.instagram.com/lmsh_lmcps/)
 * [111th社團ig](https://www.instagram.com/lmsh_lmcps3rd/)
-* [112th社團ig(當屆)](https://www.instagram.com/lmshlmcps4th/)
+* [112th社團ig](https://www.instagram.com/lmshlmcps4th/)
+* [113th社團ig(當屆)](https://www.instagram.com/lmshlmcps5th/)
 ## Website
 * [社團網站](https://sites.google.com/view/lmcps/%E9%A6%96%E9%A0%81)
 ## Hackmd
